tests/agl/rejections/parse/bare_assignment.agl
def classify(n: int) -> text = "hi"
print classify(1)
